--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Flask",
+            "cwd":"${workspaceFolder}/backend",
+            "name": "Backend",
             "type": "python",
             "request": "launch",
             "module": "flask",
@@ -15,8 +16,7 @@
             },
             "args": [
                 "run",
-                "--no-debugger",
-                "--no-reload"
+                "--no-debugger"
             ],
             "jinja": true,
             "justMyCode": true
