--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "cwd":"${workspaceFolder}/frontend",
             "command": "npm start",
             "name": "Run npm start",
             "request": "launch",
