--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "Launch Chrome",
+            "name": "Chrome",
             "request": "launch",
             "type": "chrome",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}/frontend/src"
         },
         {
             "cwd":"${workspaceFolder}/frontend",
             "command": "npm start",
-            "name": "Run npm start",
+            "name": "Frontend",
             "request": "launch",
             "type": "node-terminal"
         },
