--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Chrome",
             "request": "launch",
@@ -36,5 +35,12 @@
             "jinja": true,
             "justMyCode": true
         }
-    ]
+    ],
+    "compounds": [
+        {
+          "name": "all",
+          "configurations": ["Backend", "Frontend", "Chrome"],
+          "stopAll": true
+        }
+      ]
 }
